# vsb-eink-panel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  esp_idf_toolchain.bat  idf-toolchain.fish  sdkconfig  sdkconfig.defaults
.github/workflows/: build.yml
docs/: vsb-eink-panels-mqtt.yml
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
main/src/: config.cpp  config.h  config.hpp  eink_mqtt.cpp  eink_mqtt.h  events.hpp  main.cpp  utils.cpp  utils.h
main/src/drivers/: inkplate_button.cpp  inkplate_button.h  inkplate_static.h  inkplate_touchpad.cpp  inkplate_touchpad.h  inkplate_waveform.cpp  inkplate_waveform.h
main/src/services/: inkplate_static.cpp
main/src/tasks/: common.h
main/src/tasks/panel/: panel_task.cpp  panel_task.h  panel_task.hpp
main/src/tasks/system/: system_task.cpp  system_task.h  system_task.hpp
main/src/tasks/websocket/: websocket_task.cpp  websocket_task.hpp
provisioning/: example.nvs.csv
scripts/: generate_raw_bitmap.py  pack_firmware.py  provision_panel.py
